src/test/ui/const-generics/type-dependent/type-mismatch.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/type-mismatch.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0308]: mismatched types
  --> $DIR/type-mismatch.rs:10:27
   |
LL |     assert_eq!(R.method::<1u16>(), 1);
   |                           ^^^^ expected `u8`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `u8`
   |
LL |     assert_eq!(R.method::<1u8>(), 1);
   |                           ^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
